add google play asset delivery plugin early access docs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Porret Gaming | Unreal Engine Android Code Plugins</title>
   <!-- SEO Configuration START-->
   <meta name="description" content="Multiple high-quality Unreal Engine code plugins for Android. Integrate with Google Play services, native Android features and more! Full Documentation.">
-  <meta name="date" content="2024-07-03" scheme="YYYY-MM-DD">
+  <meta name="date" content="2024-07-23" scheme="YYYY-MM-DD">
   <meta name="rating" content="General">
   <!-- Structured Data for Rich Snippets START -->
   <script type="application/ld+json">
@@ -237,6 +237,25 @@
       <h1 class="section-header" style="color:rgb(134, 207, 255)">UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/google-play-services/asset-delivery/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom rose">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Play Asset Delivery V2</h5>
+              </div>
+              <img src="images/AssetDelivery/AssetDelivery_Feature_Image.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine plugin replacing built in Google Play Core Libraries for Play Asset Delivery for Android Game Developers.
+                </p>
+                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/e3344f2c9ea941f4a5d93ebe1ee4fb21' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a> -->
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/utility-pack/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom lavender">
               <img class="new-tag" alt='New!' src='images/NewTag.png' />
@@ -258,7 +277,7 @@
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/notifications/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom lavender">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <!-- <img class="new-tag" alt='New!' src='images/NewTag.png' /> -->
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Android Notifications</h5>
               </div>
