--- a/plugins/google-play-services/asset-delivery/contact.html
+++ b/plugins/google-play-services/asset-delivery/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Billing Update</title>
+    <title>UE Plugin | Contact</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="getting_started.html">
+                            <a class="nav-link inactive" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
@@ -60,7 +60,7 @@
                             <a class="nav-link disabled">Support</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="contact.html">
+                            <a class="nav-link active" href="contact.html">
                                 Contact
                             </a>
                         </li>
@@ -72,49 +72,60 @@
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Getting Started</h1>
+                    <h1 class="h2 text-white-shadow">Contact</h1>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="info">
-                        <ol class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                Purchase the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/203601e3ab6f4083b92a3fb6d056a9d9" target="_blank">Official Unreal Engine Marketplace</a>.
-                            </p>
-                            <li class="list-group-item">
-                                Install the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
-                                Go to the Library tab and find the plugin and add it to the engine.
-                            </p>
-                            <li class="list-group-item">
-                                Enable Play Services Billing Library Update Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In Unreal Engine, the plugin will be available in the plugins section.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span
-                                    style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Play Services Billing Library Update</span>" and ensure it is enabled.
-                            </p>
-                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                                <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/BillingUpdate/Plugin_Enabled.png">
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="https://discord.gg/GgtddXNYRN" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom discord-color" style="box-shadow: 0 0 15px rgb(114,137,218);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">Discord</h4>
+                                    </div>
+                                    <img src="../../../images/general/Discord.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            https://discord.gg/GgtddXNYRN
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                            <li class="list-group-item">
-                                Disable Any Other Billing Plugins
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Other plugins or software upgrading the Billing Library for you can cause issues or even override this plugins update.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> and disable any other custom Billing plugins you may have purchased off the Marketplace.</br>
-                            </p>
-                        </ol>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="mailto: porretgaming@gmail.com" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom gmail-color" style="box-shadow: 0 0 15px rgb(255, 78, 78);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">Email</h4>
+                                    </div>
+                                    <img src="../../../images/general/Gmail.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            porretgaming@gmail.com
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="https://twitter.com/PorretGaming" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom twitter-color" style="box-shadow: 0 0 15px rgb(46, 46, 46);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">X (Twitter)</h4>
+                                    </div>
+                                    <img src="../../../images/general/Twitter.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            https://twitter.com/PorretGaming
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div style="margin-bottom: 150px">
+                                
+                <div style="margin-bottom: 700px">
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
