--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Billing Update</title>
+    <title>UE Plugin | Asset Delivery</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -46,12 +46,12 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="overview.html">
+                            <a class="nav-link active" href="overview.html">
                                 Overview
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="getting_started.html">
+                            <a class="nav-link inactive" href="getting_started.html">
                                 Getting Started
                             </a>
                         </li>
@@ -71,50 +71,33 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
-                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Getting Started</h1>
+                <div class="container border-bottom"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Play Asset Delivery Overview</h1>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                <div class="container" style="margin-left: 0px; padding-left: 0px">
                     <div class="info">
-                        <ol class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                Purchase the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/203601e3ab6f4083b92a3fb6d056a9d9" target="_blank">Official Unreal Engine Marketplace</a>.
-                            </p>
-                            <li class="list-group-item">
-                                Install the Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
-                                Go to the Library tab and find the plugin and add it to the engine.
-                            </p>
-                            <li class="list-group-item">
-                                Enable Play Services Billing Library Update Plugin
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                In Unreal Engine, the plugin will be available in the plugins section.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span
-                                    style="font-weight: 500">Plugins</span> -> Search for "<span
-                                    style="font-weight: 500">Play Services Billing Library Update</span>" and ensure it is enabled.
-                            </p>
-                            <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                                <div style="display: flex; justify-content: center; align-items: center;">
-                                    <img style="max-width: 80%" src="../../../images/BillingUpdate/Plugin_Enabled.png">
-                                </div>
-                            </div>
-                            <li class="list-group-item">
-                                Disable Any Other Billing Plugins
-                            </li>
-                            <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Other plugins or software upgrading the Billing Library for you can cause issues or even override this plugins update.</br>
-                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> and disable any other custom Billing plugins you may have purchased off the Marketplace.</br>
-                            </p>
-                        </ol>
+                        <p class="content">
+                            <b>Google Play Asset Delivery (PAD)</b> - ( Under Construction )
+                        </p>
+                        <p class="content">
+                            This plugin is designed to replace the existing Google PAD plugin provided by Unreal Engine.
+                        </p>
+                        <p class="content">
+                            The plugin does not make use of the deprecated core libraries and uses the new updated play asset delivery libraries.
+                            These newer libraries are <span style="font-weight: 500">Android 14+ compliant</span> allowing you to comply with Google Play Store policies and target API-34.
+                        </p>
+                        <p class="content">
+                            The plugins primary feature is to automatically convert your packaged application as an <span style="font-weight: 500">install-time</span> asset pack.
+                            This allows you to publish application bundles larger than the current 200MB size limit to Google Play.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            <span style="font-weight: 500">NOTE: </span> This plugin does not provide "fast-follow" and "on-demand" asset pack delivery functionality.</br>
+                        </p>
                     </div>
-                </div>
-                <div style="margin-bottom: 150px">
+                    <!-- </div> -->
+                    <div style="margin-bottom: 700px">
+                    </div>
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
