add in-app-updates reccomendation

--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -55,6 +55,12 @@
                                 Getting Started
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link gradient-container" target="_blank" href="../in-app-updates/overview.html?utm_source=Nav%20Promotion">
+                                Play Services: In-App Updates
+                            </a>
+                            <div class="arrow"></div>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
@@ -95,6 +101,19 @@
                             <span style="font-weight: 500">NOTE: </span> This plugin does not provide "fast-follow" and "on-demand" asset pack delivery functionality.</br>
                         </p>
                     </div>
+                    
+                    <div class="container" style="padding-top: 20px; margin-left: 0px; padding-left: 0px;">
+                        <div class="warning">
+                            <p>
+                                Recommeded Plugin: <span style="font-weight: 500">In-App Updates</span>
+                            </p>
+                            <p style="margin-bottom: 0rem; font-size: 1rem;">
+                                This plugin works well with our In-App Updates plugin to detect updates and download them without the user having to check or use the Google Play Store at all!
+                                This plugin is sold seperately and you can learn more about it <a href="../in-app-updates/overview.html?utm_source=Promotion">here</a>.
+                            </p>
+                        </div>
+                    </div>
+                    
                     <!-- </div> -->
                     <div style="margin-bottom: 700px">
                     </div>
