--- a/plugins/google-play-services/asset-delivery/contact.html
+++ b/plugins/google-play-services/asset-delivery/contact.html
@@ -55,6 +55,12 @@
                                 Getting Started
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link gradient-container" target="_blank" href="../in-app-updates/overview.html?utm_source=Nav%20Promotion">
+                                Play Services: In-App Updates
+                            </a>
+                            <div class="arrow"></div>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
