--- a/plugins/google-play-services/billing-update/overview.html
+++ b/plugins/google-play-services/billing-update/overview.html
@@ -55,6 +55,12 @@
                                 Getting Started
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link gradient-container" target="_blank" href="../billing/overview.html?utm_source=Nav%20Promotion">
+                                Play Services: Billing
+                            </a>
+                            <div class="arrow"></div>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
