add nav promotion to ads plugin docs

--- a/plugins/advertising/admob/overview.html
+++ b/plugins/advertising/admob/overview.html
@@ -91,7 +91,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link gradient-container" target="_blank" href="../../google-play-services/base-services/overview.html">
+                            <a class="nav-link gradient-container" target="_blank" href="../../google-play-services/base-services/overview.html?utm_source=Nav%20Promotion">
                                 Google Play Game Services
                             </a>
                             <div class="arrow"></div>
