--- a/plugins/google-play-services/base-services/achievements.html
+++ b/plugins/google-play-services/base-services/achievements.html
@@ -76,19 +76,19 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link gradient-container" target="_blank" href="../saved-games/overview.html">
+                            <a class="nav-link gradient-container" target="_blank" href="../saved-games/overview.html?utm_source=Nav%20Promotion">
                                 Saved Games
                             </a>
                             <div class="arrow"></div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link gradient-container" target="_blank" href="../events/overview.html">
+                            <a class="nav-link gradient-container" target="_blank" href="../events/overview.html?utm_source=Nav%20Promotion">
                                 Events
                             </a>
                             <div class="arrow"></div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link gradient-container" target="_blank" href="../../advertising/admob/overview.html">
+                            <a class="nav-link gradient-container" target="_blank" href="../../advertising/admob/overview.html?utm_source=Nav%20Promotion">
                                 Admob Advertising
                             </a>
                             <div class="arrow"></div>
