--- a/plugins/advertising/admob/rewarded_video_ads.html
+++ b/plugins/advertising/admob/rewarded_video_ads.html
@@ -90,6 +90,12 @@
                                 Mediation
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link gradient-container" target="_blank" href="../../google-play-services/base-services/overview.html?utm_source=Nav%20Promotion">
+                                Google Play Game Services
+                            </a>
+                            <div class="arrow"></div>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
