add play services warning and gradle update requirement

--- a/plugins/google-play-services/asset-delivery/getting_started.html
+++ b/plugins/google-play-services/asset-delivery/getting_started.html
@@ -182,6 +182,14 @@
                                 </div>
                             </div>
                             <li class="list-group-item">
+                                Update Gradle if you are Using Older Engine Versions
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                If you are using <span style="font-weight: 500">Unreal Engine Versions 5.2 and below</span>, your gradle is outdated and needs to be upgraded to download the latest libraries during your packaging process.</br></br>
+                                We have a <span style="font-weight: 500">FREE</span> Android Utility Pack plugin which seamlessly upgrades Gradle along with other optional SDK fixes for Unreal Engine.
+                                Download the plugin on the <a target="_blank" href="https://www.unrealengine.com/marketplace/en-US/product/e3344f2c9ea941f4a5d93ebe1ee4fb21">Official Unreal Engine Marketplace</a> and follow our <a target="_blank" href="../../android-native/utility-pack/overview.html">documentation</a> to upgrade your gradle version.
+                            </p>
+                            <li class="list-group-item">
                                 Verify
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
