--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -101,6 +101,19 @@
                             <span style="font-weight: 500">NOTE: </span> This plugin does not provide "fast-follow" and "on-demand" asset pack delivery functionality.</br>
                         </p>
                     </div>
+
+                    <div class="info" style="margin-top: 20px;">
+                        <p class="content">
+                            <span style="font-weight: 500;">Google Play Games Services:</span>
+                        </p>
+                        <p class="content">
+                            Using this plugin, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
+                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine.
+                        </p>
+                    </div>
                     
                     <div class="container" style="padding-top: 20px; margin-left: 0px; padding-left: 0px;">
                         <div class="warning">
