go live with google pad plugin

--- a/plugins/google-play-services/asset-delivery/getting_started.html
+++ b/plugins/google-play-services/asset-delivery/getting_started.html
@@ -87,7 +87,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/" target="_blank">Official Unreal Engine Marketplace</a> (Disabled untill Go-Live).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/5029dc20e0bf4c8d911f7c4cf3652c45" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
@@ -122,6 +122,35 @@
                             <div class="container" style="margin-left: 0px; padding-left: 0px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
                                     <img style="max-width: 80%" src="../../../images/AssetDelivery/GooglePAD_Plugin_Disabled.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Install at least java 11
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Ensure you have at least java 11 installed on your machine.
+                            </p>
+                            <li class="list-group-item">
+                                Download Android API-34
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Download at least Android API-34 from Android Studio, if you have not done so already.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/AndroidStudioSDKDownload.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Package with Android API-34
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In your Unreal Engine Editor, go to <span style="font-weight: 500;">Project Settings</span> -> <span style="font-weight: 500;">Platforms</span> -> <span style="font-weight: 500;">Android SDK</span> 
+                                in the Project Settings left navigation bar. Under <span style="font-weight: 500;">SDKConfig</span>, go to the field "<span style="font-weight: 500;">SDK API Level</span>" and put in "<span style="font-weight: 500;">android-34</span>" or greater.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 40px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 90%" src="../../../images/Admob/UpdateAndroidSDKTargetAPI.png">
                                 </div>
                             </div>
                             <li class="list-group-item">
