--- a/plugins/release/notes/play_asset_delivery.html
+++ b/plugins/release/notes/play_asset_delivery.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>Android Utility Pack | Release Notes</title>
+    <title>Play Asset Delivery | Release Notes</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="android_utility_pack.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link inactive" href="android_utility_pack.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png" alt="Android Utility Pack" class="dropdown-item-image">
                                 Android Utility Pack
                             </a>
@@ -79,7 +79,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="play_asset_delivery.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link active" href="play_asset_delivery.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
                                 Play: Asset Delivery
                             </a>
@@ -127,7 +127,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Android Utility Pack</h1>
+                    <h1 class="h2 text-white-shadow">Play Asset Delivery</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="news-card expanded">
@@ -135,77 +135,11 @@
                             <div class="news-group-item">
                                 <div class="row">
                                     <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png">
-                                    </div>
-                                    <div class="col-9" style="padding-left: 10px">
-                                        <div class="news-title">Feature Release</div>
-                                        <div class="news-sub-title">2024-07-16</div>
-                                    </div>
-                                    <div class="col text-right" style="padding-left: 10px">
-                                        <div class="news-title">v1.0.2</div>
-                                    </div>
-                                </div>
-                            </div>
-                    
-                            <div class="news-info">
-                                <div class="row">
-                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
-                                        <div class="news-info-details" style="font-weight: 500">
-                                            <ul>
-                                                <li>Add an Optional androidx.fragment Update</li>
-                                                <li>Adds 'androidx.fragment:fragment:1.3.6' Constraint to Dependencies</li>
-                                                <li>Google Play Console will Prompt you to do this if it is Required</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="padding: 10px"></div>
-                    <div class="news-card expanded">
-                        <div class="news-container">
-                            <div class="news-group-item">
-                                <div class="row">
-                                    <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png">
-                                    </div>
-                                    <div class="col-9" style="padding-left: 10px">
-                                        <div class="news-title">Feature Release</div>
-                                        <div class="news-sub-title">2024-06-27</div>
-                                    </div>
-                                    <div class="col text-right" style="padding-left: 10px">
-                                        <div class="news-title">v1.0.1</div>
-                                    </div>
-                                </div>
-                            </div>
-                    
-                            <div class="news-info">
-                                <div class="row">
-                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
-                                        <div class="news-info-details" style="font-weight: 500">
-                                            <ul>
-                                                <li>Add an Optional Gradle Upgrade in the Configuration Settings</li>
-                                                <li>Upgrades Unreal Engine's Gradle to 7.5, Matching Later Versions</li>
-                                                <li>Upgrade Only Applies to Versions 4.27 to 5.2 Inclusive (Automatically Detected)</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="padding: 10px"></div>
-                    <div class="news-card expanded">
-                        <div class="news-container">
-                            <div class="news-group-item">
-                                <div class="row">
-                                    <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png">
+                                        <img class="news-badge" src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
-                                        <div class="news-sub-title">2024-06-06</div>
+                                        <div class="news-sub-title">2024-08-05</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
                                         <div class="news-title">v1.0.0</div>
@@ -217,25 +151,23 @@
                                 <div class="row">
                                     <div class="col-auto">
                                         <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
-                                            src="../../../images/general/UtilityPack_Thumbnail.png">
+                                            src="../../../images/general/PlayAssetDelivery_Thumbnail.png">
                                     </div>
                                     <div class="col-auto" style="display:flex; align-items: center; margin: 0">
                                         <div class="news-info-details" style="font-weight: 500">
                                             <ul>
-                                                <li>Automatic Android API-33 UE Source Code Fixes</li>
-                                                <li>Automatic Android API-34 UE Source Code Fixes</li>
-                                                <li>Android ADB Logging</li>
-                                                <li>SDK Version Detection</li>
+                                                <li>Android 14 Compliant</li>
+                                                <li>Offers Automatic Install-Time Delivery</li>
+                                                <li>Publish Bundles Larger than 200MB to the Google Play Store</li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-auto" style="display:flex; align-items: center; margin: 0">
                                         <div class="news-info-details" style="font-weight: 500">
                                             <ul>
-                                                <li>Check Internet Connectivity</li>
-                                                <li>Detect Internet Connectivity Changes</li>
-                                                <li>Android Lifecycle Events</li>
-                                                <li>Android Battery Information</li>
+                                                <li>Uses Googles Latest Libraries</li>
+                                                <li>Cheaper Alternative to our Google PAD PRO Plugin</li>
+                                                <li>Automatic Bundling</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -245,8 +177,8 @@
                     </div>
                 </div>
             </main>
-            <div style="margin-bottom: 950px">
-            </div>
+            <div style="margin-bottom: 1000px">
+            </div>    
         </div>
     </div>
 
