--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -84,7 +84,7 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px">
                     <div class="info">
                         <p class="content">
-                            <b>Google Play Asset Delivery (PAD)</b> - ( Under Construction )
+                            <b>Google Play Asset Delivery (PAD)</b>
                         </p>
                         <p class="content">
                             This plugin is designed to replace the existing Google PAD plugin provided by Unreal Engine.
@@ -98,7 +98,8 @@
                             This allows you to publish application bundles larger than the current 200MB size limit to Google Play.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            <span style="font-weight: 500">NOTE: </span> This plugin does not provide "fast-follow" and "on-demand" asset pack delivery functionality.</br>
+                            <span style="font-weight: 500">NOTE: </span> This plugin does not provide "fast-follow" and "on-demand" asset pack delivery functionality.</br></br>
+                            <span style="font-weight: 500">NOTE: </span> I am currently developing a PRO version of this plugin which will contain fast-follow and on-demand as well. That plugin will be sold seperately.</br>
                         </p>
                     </div>
 
