--- a/plugins/release/notes/porret_gaming.html
+++ b/plugins/release/notes/porret_gaming.html
@@ -79,6 +79,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="play_asset_delivery.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png" alt="Google Play Asset Delivery" class="dropdown-item-image">
+                                Play: Asset Delivery
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="play_base_services.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/PlayBaseServices/GooglePlay_BaseServices_Plugin_Logo.png" alt="Google Play Base Services" class="dropdown-item-image">
                                 Play: Base Services
@@ -124,6 +130,50 @@
                     <h1 class="h2 text-white-shadow">Porret Gaming News</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AssetDelivery/AssetDelivery_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">New Plugin: Play Asset Delivery</div>
+                                        <div class="news-sub-title">2024-08-05</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto">
+                                        <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
+                                            src="../../../images/general/PlayAssetDelivery_Thumbnail.png">
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Android 14 Compliant</li>
+                                                <li>Offers Automatic Install-Time Delivery</li>
+                                                <li>Publish Bundles Larger than 200MB to the Google Play Store</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Uses Googles Latest Libraries</li>
+                                                <li>Cheaper Alternative to our Google PAD PRO Plugin</li>
+                                                <li>Automatic Bundling</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="btn-learn-more" href="../../../plugins/android-native/utility-pack/overview.html">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 5px"></div>
                     <div class="news-card expanded">
                         <div class="news-container">
                             <div class="news-group-item">
@@ -302,7 +352,7 @@
                         </div>
                     </div>
                     <div style="padding: 5px"></div>
-                    <div class="news-card expanded">
+                    <div class="news-card">
                         <div class="news-container">
                             <div class="news-group-item">
                                 <div class="row">
