add the Get it on UE Marketplace to index

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                 <p class="card-text">
                   Unreal Engine plugin replacing built in Google Play Core Libraries for Play Asset Delivery for Android Game Developers.
                 </p>
-                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/e3344f2c9ea941f4a5d93ebe1ee4fb21' class="btn btn-custom" target="_blank">
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/5029dc20e0bf4c8d911f7c4cf3652c45' class="btn btn-custom" target="_blank">
                   <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
-                </a> -->
+                </a>
               </div>
             </div>
           </a>
