add reason for Google Play Games services no longer working

--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -108,7 +108,8 @@
                             <span style="font-weight: 500;">Google Play Games Services:</span>
                         </p>
                         <p class="content">
-                            Using this plugin, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
+                            Using this plugin, if you are using UE5.3 or lower, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
+                            This is due to the latest libraries dependencies conflicting with Unreal Engine's built-in library dependencies.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
