--- a/plugins/google-play-services/asset-delivery/overview.html
+++ b/plugins/google-play-services/asset-delivery/overview.html
@@ -108,12 +108,16 @@
                             <span style="font-weight: 500;">Google Play Games Services:</span>
                         </p>
                         <p class="content">
-                            Using this plugin, if you are using UE5.3 or lower, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
+                            Using this plugin, if you are using UE5.0 or lower, this plugin may cause Google Play Games Services functionality to no longer work, such as the built-in Leaderboards, Achievements and Games Sign-in functionality.
                             This is due to the latest libraries dependencies conflicting with Unreal Engine's built-in library dependencies.
+                        </p>
+                        <p class="content">
+                            In this situation, the plugin upgrades the Google Play Games Services libraries to be compatible in order to provide this service.
+                            The implications of doing this upgrade may lead to issues when using those services.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
-                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine.
+                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine and is highly recommeded.
                         </p>
                     </div>
                     
